--- a/examples/web_app/Cargo.toml
+++ b/examples/web_app/Cargo.toml
@@ -12,6 +12,7 @@ wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4.18"
 yew = "0.18"
 meilisearch-sdk = {path="../.."}
+lazy_static = "1.4"
 serde = {version="1.0", features=["derive"]}
 web-sys = "0.3"
 console_error_panic_hook = "0.1"
